2008-09-02  Andreas Jaeger  <aj@suse.de>

	* sysdeps/unix/sysv/linux/s390/s390-32/utmp-convert.h: Fix last
	commit.

2008-08-26  Aurelien Jarno  <aurelien@aurel32.net>

	[BZ #6860]
        * hurd/hurd/signal.h (HURD_MSGPORT_RPC): Fix a typo.

2008-07-18  Daniel Jacobowitz  <dan@codesourcery.com>

	* Makefile (check-data): Check data directory in add-ons.
	* elf/Makefile (check-data): Likewise.

2008-08-18  Roland McGrath  <roland@redhat.com>

	* configure.in (--with-cpu): Check compiler support for -march/-mcpu.
	* configure: Regenerated.
	* config.make.in (cflags-cpu): New substituted variable.
	(with-cpu): Variable removed.
	* Makeconfig (+cflags): Use $(cflags-cpu), not $(with-cpu).

2008-08-14  Ryan S. Arnold  <rsa@us.ibm.com>

	[BZ #6845]
	* sysdeps/powerpc/fpu/bits/mathinline.h (__signbitl): Copy new
	__signbitl definition and __LONG_DOUBLE_128__ guard from:
	* sysdeps/unix/sysv/linux/powerpc/bits/mathinline.h: Remove as
	redundant.  Functions which call floating point assembler operations
	should go into a sysdeps powerpc/fpu directory.

2008-08-15  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/x86_64/bits/mman.h: Define MAP_STACK.
	* sysdeps/unix/sysv/linux/i386/bits/mman.h: Likewise.

2008-08-14  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/x86_64/memset.S: Reduce size of tables for PIC.

	* sysdeps/unix/sysv/linux/dl-origin.c (_dl_get_origin): Undo all
	change related to AT_EXECFN.  We cannot use that string.
	* sysdeps/generic/ldsodefs.h (struct rtld_global_ro): Remove
	_dl_execfn member.
	* elf/dl-support.c: Remove _dl_execfn variable.
	(_dl_aux_init): Remove handling of AT_EXECFN.
	* elf/dl-sysdep.c (_dl_sysdep_start): Remove handling of AT_EXECFN.
	* elf/rtld.c (process_envvars): Remove use of __ASSUME_AT_EXECFN.

2008-08-13  Ulrich Drepper  <drepper@redhat.com>

	[BZ #6544]
	* libio/fmemopen.c: Implement binary mode.  In this mode no NUL
	byte gets added to writes and seeks from the end use the length of